# pair_trading

./: .env  .env.template  .gitignore  ALGORITHM.md  ALGORITHM_TEST_RESULTS.md  CHANGELOG_SIMULATOR.md  IMPLEMENTATION.md  README.md  TRADFI_INTEGRATION_SUMMARY.md  check_network.py  code_context.txt  config.yaml  debug_api.py  debug_trading_loop.py  example.py  example_bybit_tradfi.py  example_simulation.py  example_yahoo_stocks.py  find_cointegrated_pairs.py  hello.py  paper_text.txt  pyproject.toml  requirements.txt  run_simulation.py  test_algorithm.py  test_bybit_connection.py  test_okx_connection.py  verify_paper.py
docs/: BYBIT_INTEGRATION.md  BYBIT_STOCKS_STATUS.md  BYBIT_TRADFI_GUIDE.md  PERFORMANCE_SIMULATOR.md  QUICK_REFERENCE.md  SIMULATOR_SUMMARY.md
get_data/: download_all_data.py  download_binance_futures.py  download_bybit_data.py  download_yahoo_stocks.py
reports/: backtest_rolling_1h_f60_t7.csv  cointegrated_pairs_20260201_000921.csv  cointegrated_pairs_20260201_000921.txt  cointegrated_pairs_20260213_154806.csv  cycles_20260130_230556.csv  equity_20260130_230556.csv  report_20260130_230536.json  report_20260130_230536.txt  report_20260130_230556.json
src/: alpaca_client.py  backtest_reference_copula.py  backtest_rolling_local.py  backtest_rolling_yahoo.py  bybit_client.py  copula_model.py  data_buffer.py  data_io.py  download_binance_futures.py  download_bybit_data.py  download_yahoo_stocks.py  generate_report.py  live_trader.py  main.py  okx_client.py  paper_client.py  performance_simulator.py  run_paper_grid.py  stats_tests.py  strategy_core.py
(+8 files in other folders)
